--- a/Health_files/style.css
+++ b/Health_files/style.css
@@ -977,7 +977,7 @@ h6 {
     transition: all 0.13s ease-in-out, background-position 1s ease;
     overflow: hidden;
     height: 264px;
-    background-image: linear-gradient(25deg,transparent,transparent 50%,rgba(155,15,1,.3));
+    background-image: linear-gradient(25deg,transparent,transparent 50%,rgba(51,169,238,.3));
     background-size: 15%;
     cursor: pointer;
 }
@@ -1003,7 +1003,7 @@ h6 {
 }
 .services-col-2:hover {
 
-    border: 2px solid #E74424;
+    border: 2px solid #33A9EE;
     border-radius: 5px;
     -webkit-transition: all 0 .03s ease-in-out;
     -moz-transition: all 0 .03s ease-in-out;
